--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,31 +1,30 @@
 version: "3"
 services:
   frontend:
-    image: flowolfox/docker-frontend
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./frontend
     volumes:
       - /app/node_modules
       - ./frontend:/app
     stdin_open: true
-    mem_limit: 128m
 
   nginx:
     restart: always
-    image: flowolfox/docker-nginx
+    build:
+      dockerfile: Dockerfile
+      context: ./nginx
     ports:
-      - "80:80"
+      - "3000:80"
 
   backend:
-    image: flowolfox/docker-backend
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./backend
     container_name: app_backend
     volumes:
       - /app/node_modules
       - ./backend:/app
-    environment:
-      MYSQL_HOST: $MYSQL_HOST
-      MYSQL_USER: $MYSQL_USER
-      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
-      MYSQL_DATABASE: $MYSQL_DATABASE
-      MYSQL_PORT: $MYSQL_PORT
 
   # mysql:
   #   build: ./mysql
