--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,21 @@
 version: "3"
 services:
   frontend:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./frontend
+    image: flowolfox/docker-frontend
     volumes:
       - /app/node_modules
       - ./frontend:/app
     stdin_open: true
+    mem_limit: 128m
 
   nginx:
     restart: always
-    build:
-      dockerfile: Dockerfile
-      context: ./nginx
+    image: flowolfox/docker-nginx
     ports:
-      - "3000:80"
+      - "80:80"
 
   backend:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./backend
+    image: flowolfox/docker-backend
     container_name: app_backend
     volumes:
       - /app/node_modules
